# networkCameras

./: LICENSE  README.org  __main__.py  networkcameras.service  pyproject.toml
networkcameras/: __main__.py  app.py  camera.py
templates/: index.html
