[tool.poetry]
name = "networkcameras"
version = "0.1.0"
description = ""
authors = ["Lewis Collum <lewiscollum4@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
run = "networkcameras.app:main"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.5.5"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
